; ModuleID = '/home/carl/AnghaBench/redcarpet/ext/redcarpet/extr_html_smartypants.c_smartypants_cb__escape.c'
source_filename = "/home/carl/AnghaBench/redcarpet/ext/redcarpet/extr_html_smartypants.c_smartypants_cb__escape.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.buf = type { i32 }
%struct.smartypants_data = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.buf*, %struct.smartypants_data*, i32, i32*, i64)* @smartypants_cb__escape to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @smartypants_cb__escape(%struct.buf* %0, %struct.smartypants_data* %1, i32 %2, i32* %3, i64 %4) #0 {
  %6 = alloca i64, align 8
  %7 = alloca %struct.buf*, align 8
  %8 = alloca %struct.smartypants_data*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i64, align 8
  store %struct.buf* %0, %struct.buf** %7, align 8
  store %struct.smartypants_data* %1, %struct.smartypants_data** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32* %3, i32** %10, align 8
  store i64 %4, i64* %11, align 8
  %12 = load i64, i64* %11, align 8
  %13 = icmp ult i64 %12, 2
  br i1 %13, label %14, label %15

14:                                               ; preds = %5
  store i64 0, i64* %6, align 8
  br label %28

15:                                               ; preds = %5
  %16 = load i32*, i32** %10, align 8
  %17 = getelementptr inbounds i32, i32* %16, i64 1
  %18 = load i32, i32* %17, align 4
  switch i32 %18, label %25 [
    i32 92, label %19
    i32 34, label %19
    i32 39, label %19
    i32 46, label %19
    i32 45, label %19
    i32 96, label %19
  ]

19:                                               ; preds = %15, %15, %15, %15, %15, %15
  %20 = load %struct.buf*, %struct.buf** %7, align 8
  %21 = load i32*, i32** %10, align 8
  %22 = getelementptr inbounds i32, i32* %21, i64 1
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @bufputc(%struct.buf* %20, i32 %23)
  store i64 1, i64* %6, align 8
  br label %28

25:                                               ; preds = %15
  %26 = load %struct.buf*, %struct.buf** %7, align 8
  %27 = call i32 @bufputc(%struct.buf* %26, i32 92)
  store i64 0, i64* %6, align 8
  br label %28

28:                                               ; preds = %25, %19, %14
  %29 = load i64, i64* %6, align 8
  ret i64 %29
}

declare dso_local i32 @bufputc(%struct.buf*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
